# gen/go/proto/server.pb.go
@@ -311,6 +311,151 @@ func (*RateChoicesResponse) Descriptor() ([]byte, []int) {
 	return file_proto_server_proto_rawDescGZIP(), []int{3}
 }
 
+// Request to get the Arena leaderboard.
+type GetLeaderboardRequest struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+}
+
+func (x *GetLeaderboardRequest) Reset() {
+	*x = GetLeaderboardRequest{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_proto_server_proto_msgTypes[4]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *GetLeaderboardRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetLeaderboardRequest) ProtoMessage() {}
+
+func (x *GetLeaderboardRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_proto_server_proto_msgTypes[4]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetLeaderboardRequest.ProtoReflect.Descriptor instead.
+func (*GetLeaderboardRequest) Descriptor() ([]byte, []int) {
+	return file_proto_server_proto_rawDescGZIP(), []int{4}
+}
+
+// LeaderboardEntry contains the model name and its Bradley-Terry rating.
+type LeaderboardEntry struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	// Public model name.
+	Model string `protobuf:"bytes,1,opt,name=model,proto3" json:"model,omitempty"`
+	// Bradley-Terry rating of the model.
+	BradleyterrScore float64 `protobuf:"fixed64,2,opt,name=bradleyterr_score,json=bradleyterrScore,proto3" json:"bradleyterr_score,omitempty"`
+}
+
+func (x *LeaderboardEntry) Reset() {
+	*x = LeaderboardEntry{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_proto_server_proto_msgTypes[5]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *LeaderboardEntry) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*LeaderboardEntry) ProtoMessage() {}
+
+func (x *LeaderboardEntry) ProtoReflect() protoreflect.Message {
+	mi := &file_proto_server_proto_msgTypes[5]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use LeaderboardEntry.ProtoReflect.Descriptor instead.
+func (*LeaderboardEntry) Descriptor() ([]byte, []int) {
+	return file_proto_server_proto_rawDescGZIP(), []int{5}
+}
+
+func (x *LeaderboardEntry) GetModel() string {
+	if x != nil {
+		return x.Model
+	}
+	return ""
+}
+
+func (x *LeaderboardEntry) GetBradleyterrScore() float64 {
+	if x != nil {
+		return x.BradleyterrScore
+	}
+	return 0
+}
+
+// GetLeaderboardResponse contains the leaderboard of joke models.
+type GetLeaderboardResponse struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Entries []*LeaderboardEntry `protobuf:"bytes,1,rep,name=entries,proto3" json:"entries,omitempty"`
+}
+
+func (x *GetLeaderboardResponse) Reset() {
+	*x = GetLeaderboardResponse{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_proto_server_proto_msgTypes[6]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *GetLeaderboardResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetLeaderboardResponse) ProtoMessage() {}
+
+func (x *GetLeaderboardResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_proto_server_proto_msgTypes[6]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetLeaderboardResponse.ProtoReflect.Descriptor instead.
+func (*GetLeaderboardResponse) Descriptor() ([]byte, []int) {
+	return file_proto_server_proto_rawDescGZIP(), []int{6}
+}
+
+func (x *GetLeaderboardResponse) GetEntries() []*LeaderboardEntry {
+	if x != nil {
+		return x.Entries
+	}
+	return nil
+}
+
 var File_proto_server_proto protoreflect.FileDescriptor
 
 var file_proto_server_proto_rawDesc = []byte{
@@ -340,29 +485,48 @@ var file_proto_server_proto_rawDesc = []byte{
 	0x0e, 0x32, 0x12, 0x2e, 0x63, 0x68, 0x6f, 0x69, 0x63, 0x65, 0x73, 0x2e, 0x76, 0x31, 0x2e, 0x57,
 	0x69, 0x6e, 0x6e, 0x65, 0x72, 0x52, 0x05, 0x6b, 0x6e, 0x6f, 0x77, 0x6e, 0x22, 0x15, 0x0a, 0x13,
 	0x52, 0x61, 0x74, 0x65, 0x43, 0x68, 0x6f, 0x69, 0x63, 0x65, 0x73, 0x52, 0x65, 0x73, 0x70, 0x6f,
-	0x6e, 0x73, 0x65, 0x2a, 0x42, 0x0a, 0x06, 0x57, 0x69, 0x6e, 0x6e, 0x65, 0x72, 0x12, 0x0f, 0x0a,
-	0x0b, 0x55, 0x4e, 0x53, 0x50, 0x45, 0x43, 0x49, 0x46, 0x49, 0x45, 0x44, 0x10, 0x00, 0x12, 0x08,
-	0x0a, 0x04, 0x4e, 0x4f, 0x4e, 0x45, 0x10, 0x01, 0x12, 0x08, 0x0a, 0x04, 0x4c, 0x45, 0x46, 0x54,
-	0x10, 0x02, 0x12, 0x09, 0x0a, 0x05, 0x52, 0x49, 0x47, 0x48, 0x54, 0x10, 0x03, 0x12, 0x08, 0x0a,
-	0x04, 0x42, 0x4f, 0x54, 0x48, 0x10, 0x04, 0x32, 0xd9, 0x01, 0x0a, 0x05, 0x41, 0x72, 0x65, 0x6e,
-	0x61, 0x12, 0x5f, 0x0a, 0x0a, 0x47, 0x65, 0x74, 0x43, 0x68, 0x6f, 0x69, 0x63, 0x65, 0x73, 0x12,
-	0x1d, 0x2e, 0x63, 0x68, 0x6f, 0x69, 0x63, 0x65, 0x73, 0x2e, 0x76, 0x31, 0x2e, 0x47, 0x65, 0x74,
-	0x43, 0x68, 0x6f, 0x69, 0x63, 0x65, 0x73, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x1e,
-	0x2e, 0x63, 0x68, 0x6f, 0x69, 0x63, 0x65, 0x73, 0x2e, 0x76, 0x31, 0x2e, 0x47, 0x65, 0x74, 0x43,
-	0x68, 0x6f, 0x69, 0x63, 0x65, 0x73, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x12,
-	0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0c, 0x12, 0x0a, 0x2f, 0x76, 0x31, 0x2f, 0x63, 0x68, 0x6f, 0x69,
-	0x63, 0x65, 0x12, 0x6f, 0x0a, 0x0b, 0x52, 0x61, 0x74, 0x65, 0x43, 0x68, 0x6f, 0x69, 0x63, 0x65,
-	0x73, 0x12, 0x1e, 0x2e, 0x63, 0x68, 0x6f, 0x69, 0x63, 0x65, 0x73, 0x2e, 0x76, 0x31, 0x2e, 0x52,
-	0x61, 0x74, 0x65, 0x43, 0x68, 0x6f, 0x69, 0x63, 0x65, 0x73, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73,
-	0x74, 0x1a, 0x1f, 0x2e, 0x63, 0x68, 0x6f, 0x69, 0x63, 0x65, 0x73, 0x2e, 0x76, 0x31, 0x2e, 0x52,
-	0x61, 0x74, 0x65, 0x43, 0x68, 0x6f, 0x69, 0x63, 0x65, 0x73, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e,
-	0x73, 0x65, 0x22, 0x1f, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x19, 0x3a, 0x01, 0x2a, 0x22, 0x14, 0x2f,
-	0x76, 0x31, 0x2f, 0x63, 0x68, 0x6f, 0x69, 0x63, 0x65, 0x2f, 0x7b, 0x69, 0x64, 0x7d, 0x2f, 0x72,
-	0x61, 0x74, 0x65, 0x42, 0x3a, 0x5a, 0x38, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f,
-	0x6d, 0x2f, 0x53, 0x61, 0x76, 0x65, 0x54, 0x68, 0x65, 0x52, 0x62, 0x74, 0x7a, 0x2f, 0x68, 0x75,
-	0x6d, 0x6f, 0x72, 0x2f, 0x67, 0x65, 0x6e, 0x2f, 0x67, 0x6f, 0x2f, 0x63, 0x68, 0x6f, 0x69, 0x63,
-	0x65, 0x73, 0x2f, 0x76, 0x31, 0x3b, 0x63, 0x68, 0x6f, 0x69, 0x63, 0x65, 0x73, 0x76, 0x31, 0x62,
-	0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x6e, 0x73, 0x65, 0x22, 0x17, 0x0a, 0x15, 0x47, 0x65, 0x74, 0x4c, 0x65, 0x61, 0x64, 0x65, 0x72,
+	0x62, 0x6f, 0x61, 0x72, 0x64, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x22, 0x55, 0x0a, 0x10,
+	0x4c, 0x65, 0x61, 0x64, 0x65, 0x72, 0x62, 0x6f, 0x61, 0x72, 0x64, 0x45, 0x6e, 0x74, 0x72, 0x79,
+	0x12, 0x14, 0x0a, 0x05, 0x6d, 0x6f, 0x64, 0x65, 0x6c, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52,
+	0x05, 0x6d, 0x6f, 0x64, 0x65, 0x6c, 0x12, 0x2b, 0x0a, 0x11, 0x62, 0x72, 0x61, 0x64, 0x6c, 0x65,
+	0x79, 0x74, 0x65, 0x72, 0x72, 0x5f, 0x73, 0x63, 0x6f, 0x72, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28,
+	0x01, 0x52, 0x10, 0x62, 0x72, 0x61, 0x64, 0x6c, 0x65, 0x79, 0x74, 0x65, 0x72, 0x72, 0x53, 0x63,
+	0x6f, 0x72, 0x65, 0x22, 0x50, 0x0a, 0x16, 0x47, 0x65, 0x74, 0x4c, 0x65, 0x61, 0x64, 0x65, 0x72,
+	0x62, 0x6f, 0x61, 0x72, 0x64, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x36, 0x0a,
+	0x07, 0x65, 0x6e, 0x74, 0x72, 0x69, 0x65, 0x73, 0x18, 0x01, 0x20, 0x03, 0x28, 0x0b, 0x32, 0x1c,
+	0x2e, 0x63, 0x68, 0x6f, 0x69, 0x63, 0x65, 0x73, 0x2e, 0x76, 0x31, 0x2e, 0x4c, 0x65, 0x61, 0x64,
+	0x65, 0x72, 0x62, 0x6f, 0x61, 0x72, 0x64, 0x45, 0x6e, 0x74, 0x72, 0x79, 0x52, 0x07, 0x65, 0x6e,
+	0x74, 0x72, 0x69, 0x65, 0x73, 0x2a, 0x42, 0x0a, 0x06, 0x57, 0x69, 0x6e, 0x6e, 0x65, 0x72, 0x12,
+	0x0f, 0x0a, 0x0b, 0x55, 0x4e, 0x53, 0x50, 0x45, 0x43, 0x49, 0x46, 0x49, 0x45, 0x44, 0x10, 0x00,
+	0x12, 0x08, 0x0a, 0x04, 0x4e, 0x4f, 0x4e, 0x45, 0x10, 0x01, 0x12, 0x08, 0x0a, 0x04, 0x4c, 0x45,
+	0x46, 0x54, 0x10, 0x02, 0x12, 0x09, 0x0a, 0x05, 0x52, 0x49, 0x47, 0x48, 0x54, 0x10, 0x03, 0x12,
+	0x08, 0x0a, 0x04, 0x42, 0x4f, 0x54, 0x48, 0x10, 0x04, 0x32, 0xcb, 0x02, 0x0a, 0x05, 0x41, 0x72,
+	0x65, 0x6e, 0x61, 0x12, 0x5f, 0x0a, 0x0a, 0x47, 0x65, 0x74, 0x43, 0x68, 0x6f, 0x69, 0x63, 0x65,
+	0x73, 0x12, 0x1d, 0x2e, 0x63, 0x68, 0x6f, 0x69, 0x63, 0x65, 0x73, 0x2e, 0x76, 0x31, 0x2e, 0x47,
+	0x65, 0x74, 0x43, 0x68, 0x6f, 0x69, 0x63, 0x65, 0x73, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74,
+	0x1a, 0x1e, 0x2e, 0x63, 0x68, 0x6f, 0x69, 0x63, 0x65, 0x73, 0x2e, 0x76, 0x31, 0x2e, 0x47, 0x65,
+	0x74, 0x43, 0x68, 0x6f, 0x69, 0x63, 0x65, 0x73, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65,
+	0x22, 0x12, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0c, 0x12, 0x0a, 0x2f, 0x76, 0x31, 0x2f, 0x63, 0x68,
+	0x6f, 0x69, 0x63, 0x65, 0x12, 0x6f, 0x0a, 0x0b, 0x52, 0x61, 0x74, 0x65, 0x43, 0x68, 0x6f, 0x69,
+	0x63, 0x65, 0x73, 0x12, 0x1e, 0x2e, 0x63, 0x68, 0x6f, 0x69, 0x63, 0x65, 0x73, 0x2e, 0x76, 0x31,
+	0x2e, 0x52, 0x61, 0x74, 0x65, 0x43, 0x68, 0x6f, 0x69, 0x63, 0x65, 0x73, 0x52, 0x65, 0x71, 0x75,
+	0x65, 0x73, 0x74, 0x1a, 0x1f, 0x2e, 0x63, 0x68, 0x6f, 0x69, 0x63, 0x65, 0x73, 0x2e, 0x76, 0x31,
+	0x2e, 0x52, 0x61, 0x74, 0x65, 0x43, 0x68, 0x6f, 0x69, 0x63, 0x65, 0x73, 0x52, 0x65, 0x73, 0x70,
+	0x6f, 0x6e, 0x73, 0x65, 0x22, 0x1f, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x19, 0x3a, 0x01, 0x2a, 0x22,
+	0x14, 0x2f, 0x76, 0x31, 0x2f, 0x63, 0x68, 0x6f, 0x69, 0x63, 0x65, 0x2f, 0x7b, 0x69, 0x64, 0x7d,
+	0x2f, 0x72, 0x61, 0x74, 0x65, 0x12, 0x70, 0x0a, 0x0e, 0x47, 0x65, 0x74, 0x4c, 0x65, 0x61, 0x64,
+	0x65, 0x72, 0x62, 0x6f, 0x61, 0x72, 0x64, 0x12, 0x21, 0x2e, 0x63, 0x68, 0x6f, 0x69, 0x63, 0x65,
+	0x73, 0x2e, 0x76, 0x31, 0x2e, 0x47, 0x65, 0x74, 0x4c, 0x65, 0x61, 0x64, 0x65, 0x72, 0x62, 0x6f,
+	0x61, 0x72, 0x64, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x22, 0x2e, 0x63, 0x68, 0x6f,
+	0x69, 0x63, 0x65, 0x73, 0x2e, 0x76, 0x31, 0x2e, 0x47, 0x65, 0x74, 0x4c, 0x65, 0x61, 0x64, 0x65,
+	0x72, 0x62, 0x6f, 0x61, 0x72, 0x64, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x17,
+	0x82, 0xd3, 0xe4, 0x93, 0x02, 0x11, 0x12, 0x0f, 0x2f, 0x76, 0x31, 0x2f, 0x6c, 0x65, 0x61, 0x64,
+	0x65, 0x72, 0x62, 0x6f, 0x61, 0x72, 0x64, 0x42, 0x3a, 0x5a, 0x38, 0x67, 0x69, 0x74, 0x68, 0x75,
+	0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x53, 0x61, 0x76, 0x65, 0x54, 0x68, 0x65, 0x52, 0x62, 0x74,
+	0x7a, 0x2f, 0x68, 0x75, 0x6d, 0x6f, 0x72, 0x2f, 0x67, 0x65, 0x6e, 0x2f, 0x67, 0x6f, 0x2f, 0x63,
+	0x68, 0x6f, 0x69, 0x63, 0x65, 0x73, 0x2f, 0x76, 0x31, 0x3b, 0x63, 0x68, 0x6f, 0x69, 0x63, 0x65,
+	0x73, 0x76, 0x31, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -378,26 +542,32 @@ func file_proto_server_proto_rawDescGZIP() []byte {
 }
 
 var file_proto_server_proto_enumTypes = make([]protoimpl.EnumInfo, 1)
-var file_proto_server_proto_msgTypes = make([]protoimpl.MessageInfo, 4)
+var file_proto_server_proto_msgTypes = make([]protoimpl.MessageInfo, 7)
 var file_proto_server_proto_goTypes = []any{
-	(Winner)(0),                 // 0: choices.v1.Winner
-	(*GetChoicesRequest)(nil),   // 1: choices.v1.GetChoicesRequest
-	(*GetChoicesResponse)(nil),  // 2: choices.v1.GetChoicesResponse
-	(*RateChoicesRequest)(nil),  // 3: choices.v1.RateChoicesRequest
-	(*RateChoicesResponse)(nil), // 4: choices.v1.RateChoicesResponse
+	(Winner)(0),                    // 0: choices.v1.Winner
+	(*GetChoicesRequest)(nil),      // 1: choices.v1.GetChoicesRequest
+	(*GetChoicesResponse)(nil),     // 2: choices.v1.GetChoicesResponse
+	(*RateChoicesRequest)(nil),     // 3: choices.v1.RateChoicesRequest
+	(*RateChoicesResponse)(nil),    // 4: choices.v1.RateChoicesResponse
+	(*GetLeaderboardRequest)(nil),  // 5: choices.v1.GetLeaderboardRequest
+	(*LeaderboardEntry)(nil),       // 6: choices.v1.LeaderboardEntry
+	(*GetLeaderboardResponse)(nil), // 7: choices.v1.GetLeaderboardResponse
 }
 var file_proto_server_proto_depIdxs = []int32{
 	0, // 0: choices.v1.RateChoicesRequest.winner:type_name -> choices.v1.Winner
 	0, // 1: choices.v1.RateChoicesRequest.known:type_name -> choices.v1.Winner
-	1, // 2: choices.v1.Arena.GetChoices:input_type -> choices.v1.GetChoicesRequest
-	3, // 3: choices.v1.Arena.RateChoices:input_type -> choices.v1.RateChoicesRequest
-	2, // 4: choices.v1.Arena.GetChoices:output_type -> choices.v1.GetChoicesResponse
-	4, // 5: choices.v1.Arena.RateChoices:output_type -> choices.v1.RateChoicesResponse
-	4, // [4:6] is the sub-list for method output_type
-	2, // [2:4] is the sub-list for method input_type
-	2, // [2:2] is the sub-list for extension type_name
-	2, // [2:2] is the sub-list for extension extendee
-	0, // [0:2] is the sub-list for field type_name
+	6, // 2: choices.v1.GetLeaderboardResponse.entries:type_name -> choices.v1.LeaderboardEntry
+	1, // 3: choices.v1.Arena.GetChoices:input_type -> choices.v1.GetChoicesRequest
+	3, // 4: choices.v1.Arena.RateChoices:input_type -> choices.v1.RateChoicesRequest
+	5, // 5: choices.v1.Arena.GetLeaderboard:input_type -> choices.v1.GetLeaderboardRequest
+	2, // 6: choices.v1.Arena.GetChoices:output_type -> choices.v1.GetChoicesResponse
+	4, // 7: choices.v1.Arena.RateChoices:output_type -> choices.v1.RateChoicesResponse
+	7, // 8: choices.v1.Arena.GetLeaderboard:output_type -> choices.v1.GetLeaderboardResponse
+	6, // [6:9] is the sub-list for method output_type
+	3, // [3:6] is the sub-list for method input_type
+	3, // [3:3] is the sub-list for extension type_name
+	3, // [3:3] is the sub-list for extension extendee
+	0, // [0:3] is the sub-list for field type_name
 }
 
 func init() { file_proto_server_proto_init() }
@@ -454,6 +624,42 @@ func file_proto_server_proto_init() {
 				return nil
 			}
 		}
+		file_proto_server_proto_msgTypes[4].Exporter = func(v any, i int) any {
+			switch v := v.(*GetLeaderboardRequest); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_proto_server_proto_msgTypes[5].Exporter = func(v any, i int) any {
+			switch v := v.(*LeaderboardEntry); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_proto_server_proto_msgTypes[6].Exporter = func(v any, i int) any {
+			switch v := v.(*GetLeaderboardResponse); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
 	}
 	type x struct{}
 	out := protoimpl.TypeBuilder{
@@ -461,7 +667,7 @@ func file_proto_server_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_proto_server_proto_rawDesc,
 			NumEnums:      1,
-			NumMessages:   4,
+			NumMessages:   7,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
