# gen/go/proto/server.pb.gw.go
@@ -127,6 +127,24 @@ func local_request_Arena_RateChoices_0(ctx context.Context, marshaler runtime.Ma
 
 }
 
+func request_Arena_GetLeaderboard_0(ctx context.Context, marshaler runtime.Marshaler, client ArenaClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq GetLeaderboardRequest
+	var metadata runtime.ServerMetadata
+
+	msg, err := client.GetLeaderboard(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_Arena_GetLeaderboard_0(ctx context.Context, marshaler runtime.Marshaler, server ArenaServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq GetLeaderboardRequest
+	var metadata runtime.ServerMetadata
+
+	msg, err := server.GetLeaderboard(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 // RegisterArenaHandlerServer registers the http handlers for service Arena to "mux".
 // UnaryRPC     :call ArenaServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -181,6 +199,31 @@ func RegisterArenaHandlerServer(ctx context.Context, mux *runtime.ServeMux, serv
 		}
 
 		forward_Arena_RateChoices_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("GET", pattern_Arena_GetLeaderboard_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/choices.v1.Arena/GetLeaderboard", runtime.WithHTTPPathPattern("/v1/leaderboard"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_Arena_GetLeaderboard_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_Arena_GetLeaderboard_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -269,6 +312,28 @@ func RegisterArenaHandlerClient(ctx context.Context, mux *runtime.ServeMux, clie
 
 	})
 
+	mux.Handle("GET", pattern_Arena_GetLeaderboard_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/choices.v1.Arena/GetLeaderboard", runtime.WithHTTPPathPattern("/v1/leaderboard"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_Arena_GetLeaderboard_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_Arena_GetLeaderboard_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	return nil
 }
 
@@ -276,10 +341,14 @@ var (
 	pattern_Arena_GetChoices_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "choice"}, ""))
 
 	pattern_Arena_RateChoices_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2, 2, 3}, []string{"v1", "choice", "id", "rate"}, ""))
+
+	pattern_Arena_GetLeaderboard_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "leaderboard"}, ""))
 )
 
 var (
 	forward_Arena_GetChoices_0 = runtime.ForwardResponseMessage
 
 	forward_Arena_RateChoices_0 = runtime.ForwardResponseMessage
+
+	forward_Arena_GetLeaderboard_0 = runtime.ForwardResponseMessage
 )
