# gen/openapiv2/proto/server.swagger.json
@@ -87,6 +87,29 @@
           "Arena"
         ]
       }
+    },
+    "/v1/leaderboard": {
+      "get": {
+        "summary": "Gets the leaderboard of joke models.",
+        "operationId": "Arena_GetLeaderboard",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1GetLeaderboardResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "tags": [
+          "Arena"
+        ]
+      }
     }
   },
   "definitions": {
@@ -152,6 +175,34 @@
           "description": "Text of the right joke."
         }
       }
+    },
+    "v1GetLeaderboardResponse": {
+      "type": "object",
+      "properties": {
+        "entries": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/v1LeaderboardEntry"
+          }
+        }
+      },
+      "description": "GetLeaderboardResponse contains the leaderboard of joke models."
+    },
+    "v1LeaderboardEntry": {
+      "type": "object",
+      "properties": {
+        "model": {
+          "type": "string",
+          "description": "Public model name."
+        },
+        "bradleyterrScore": {
+          "type": "number",
+          "format": "double",
+          "description": "Bradley-Terry rating of the model."
+        }
+      },
+      "description": "LeaderboardEntry contains the model name and its Bradley-Terry rating."
     },
     "v1RateChoicesResponse": {
       "type": "object",
